# portfolio-rs

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  README.md  Trunk.toml  agent.sh  build.sh  clean.sh  deploy_api.sh  deploy_client.sh  deploy_full.sh  deployment.sh  docker-compose.db.yml  docker-compose.yml  down.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  portfolio.service  run.sh  run_build.sh  run_build_db.sh  run_container.sh  run_down_db.sh  run_infra.sh  run_infra_build.sh  run_test.sh  rust-toolchain.toml  tailwind.config.js
.github/workflows/: deploy.yml  rust.yml  vercel_deploy.yml  vercel_preview.yml
api/: Cargo.toml  Dockerfile
api/src/: cfg.rs  config.rs  cors.rs  lib.rs  main.rs  routes.rs
api/src/assets/: regexes.yaml
api/src/assets/html/: feedback.html
api/src/common/: extra_data.rs  html.rs  ip.rs  req.rs  send_feedback.rs  ui.rs  user_agent.rs
api/src/files/html/: feedback.html
api/src/redis/: feedback.rs  models.rs  visualizations.rs
api/src/security/: error.rs  smtp.rs
api/src/services/: feedback.rs  visits.rs  visualizations.rs
end2end/tests/: example.spec.ts
frontend/: .env.template  .gitignore  Dockerfile  README.md  astro.config.mjs  components.json  package.json  remark-reading-time.mjs  tailwind.config.mjs  tsconfig.json
frontend/messages/: en.json  zh.json
frontend/project.inlang/: project_id  settings.json
frontend/public/: browserconfig.xml  ever.avif  humans.txt  manifest.webmanifest  robots.txt
frontend/src/: middleware.ts
frontend/src/assets/: experiences.json  organizations.json  posts.json  projects.json  technologies.json
frontend/src/assets/blog/: en.json  zh.json
frontend/src/assets/experience/: en.json  zh.json
frontend/src/assets/images/: about.avif  ever.avif  mf.avif  punk.avif
frontend/src/assets/project/: en.json  zh.json
frontend/src/common/: consts.ts  cookies.ts  endpoints.ts  getBlogCards.ts  getExperience.ts  getOrgs.ts  getPost.ts  getPostById.ts  getPosts.ts  getProjectCards.ts  getTechData.ts  getViews.ts  postFeedback.ts  postView.ts  seoConfig.ts  urls.ts  utils.ts
frontend/src/common/minio/: about.ts  common.ts
frontend/src/components/blog/: Minisforum.astro
frontend/src/components/blog/organizations/: Orgs.astro  table.svelte  tableDescription.svelte
frontend/src/components/blog/wasm/: Wasm.astro  article-en.mdx  article-zh.md
frontend/src/components/common/: Divider.astro  Footer.astro  Header.astro  LinkExternal.astro  LinkPost.astro  LinkTitle.astro  Post.astro  SEO.astro  Social.astro  WorkInProgress.astro  feedback.svelte  lang.svelte  toast.svelte
frontend/src/components/darkmode/: horizontal.svelte  toggle.svelte
frontend/src/components/landing/: Hero.astro  Landing.astro  Sections.astro  tabs.svelte  wordAnimation.svelte
frontend/src/components/landing/cards/: Blog.astro  Experience.astro  (+2 more)
frontend/src/components/sections/: About.astro  Contact.astro
frontend/src/layouts/: Layout.astro  NotFoundLayout.astro  ServerErrorLayout.astro
frontend/src/pages/: 404.astro  500.astro  index.astro
frontend/src/styles/: app.css
infra/: porfolio.service
leptos/: Cargo.toml  create_service.sh  deployment.sh  portfolio.service  run.sh
leptos/src/: app.rs  lib.rs  main.rs
leptos/src/components/common/: feature.rs  helpful.rs  modal.rs
leptos/src/components/project/: card.rs  post.rs
leptos/src/layouts/: clean.rs  layout.rs
leptos/src/layouts/components/: footer.rs  header.rs
leptos/src/pages/: home.rs
leptos/src/static/: blog.json  experience.json  organizations.json
leptos/src/utils/: api.rs  config.rs
leptos/style/: output.css  tailwind.css
site/pkg/: portfolio.css  portfolio.js
src/: app.rs  db.rs  error_template.rs  lib.rs  main.rs
src/common/: api.rs  config.rs  json.rs  req.rs  tags.json
src/components/: project.rs
src/components/blog/: card.rs  post.rs
src/components/common/: card.rs  helpful.rs  icons.rs  link.rs  modal.rs  post.rs  values.rs  working.rs
src/components/experience/: entry.rs
src/components/home/: entry.rs  experience.rs  project.rs  project_card.rs
src/components/project/: card.rs  post.rs  project.rs  tech.rs
src/layout/: header.rs  layout.rs
src/layouts/: layout.rs
src/layouts/components/: footer.rs  header.rs
src/pages/: home.rs
src/pages/blog/: auth.rs  cookies.rs  ms.rs  portfolio.rs  state.rs
src/pages/projects/: aura.rs  berli.rs  picu.rs  raau.rs  test.rs
src/security/: error_template.rs
src/static/: blog.json  experience.json  organizations.json  projects.json
src/utils/: api.rs  config.rs  models.rs
style/: output.css  tailwind.css
(+34 files in other folders)
