[package]
name = "portfolio-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

icondata = "0.3.1"
leptos = { version = "0.6.12", features = ["csr"] }

leptos_icons = "0.3.1"
leptos_meta = { version = "0.6.12", features = ["csr"] }
leptos_router = { version = "0.6.12", features = ["csr"] }
# https://github.com/SorenHolstHansen/leptos_toaster
leptos_toaster = "0.1.7"
log = "0.4.21"

[lib]
name = "portfolio"
path = "src/lib.rs"

[workspace]
members = ["."]

[[workspace.metadata.leptos]]
projects = [{ name = "portfolio-rs", path = "." }]
